--- a/index.html
+++ b/index.html
@@ -33,27 +33,30 @@
     <h1>Effective Solutions for Your Business</h1>
     <button type="button">Order Service</button>
   </section>
-  <ul>
-    <li>
-      <h2>Strategy</h2>
-      <p>Our goal is to identify the business
-        problem to walk away with the perfect and creative solution. </p>
-    </li>
-    <li>
-      <h2>Punctuality</h2>
-      <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-    </li>
-    <li>
-      <h2>Diligence</h2>
-      <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-    </li>
-    <li>
-      <h2>Technologies</h2>
-      <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-    </li>
-  </ul>
   <section>
-    <h3>What are we doing</h3>
+    <h2>Our directions</h2>
+    <ul>
+      <li>
+        <h3>Strategy</h3>
+        <p>Our goal is to identify the business
+          problem to walk away with the perfect and creative solution. </p>
+      </li>
+      <li>
+        <h3>Punctuality</h3>
+        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+      </li>
+      <li>
+        <h3>Diligence</h3>
+        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+      </li>
+      <li>
+        <h3>Technologies</h3>
+        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h2>What are we doing</h2>
     <ul>
       <li>
         <img src="./img/work/pc.jpg" alt="pc" width="360" height="300">
@@ -67,26 +70,26 @@
     </ul>
   </section>
   <section>
-    <h3>Our Team</h3>
+    <h2>Our Team</h2>
     <ul>
       <li>
-        <img src="./img/team/markguerrero.jpg" alt="Mark Guerrero" width="264" height="260">
-        <h2>Mark Guerrero</h2>
+        <img src="./img/team/markguerrero.jpg" alt="a respectable man with a beard" width="264" height="260">
+        <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
       </li>
       <li>
-        <img src="./img/team/tomford.jpg" alt="Tom Ford" width="264" height="260">
-        <h2>Tom Ford</h2>
+        <img src="./img/team/tomford.jpg" alt="charismatic smiling dark-haired man" width="264" height="260">
+        <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
       </li>
       <li>
-        <img src="./img/team/camilagarcia.jpg" alt="Camila Garcia" width="264" height="260">
-        <h2>Camila Garcia</h2>
+        <img src="./img/team/camilagarcia.jpg" alt="young brunette in a pink dress" width="264" height="260">
+        <h3>Camila Garcia</h3>
         <p>Marketing</p>
       </li>
       <li>
-        <img src="./img/team/danielwilson.jpg" alt="Daniel Wilson" width="264" height="260">
-        <h2>Daniel Wilson</h2>
+        <img src="./img/team/danielwilson.jpg" alt="yong frendly man" width="264" height="260">
+        <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
       </li>
     </ul>
