--- a/index.html
+++ b/index.html
@@ -5,58 +5,64 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Effective Solutions for Your Business</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css/styles.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="">webstudio</a>
-      <ul>
-        <li>
-          <a href="">Studio</a></li>
-        <li>
-          <a href="">Portfolio</a></li>
-        <li>
-          <a href="">Contacts</a></li>
+  <header class="header-pages">
+    <nav class="page-nav">
+      <a class="logo" href="">web<span class="logo-visual">studio</span></a>
+      <ul class="menu list">
+        <li class="menu-item">
+          <a class="menu-link link" href="./index.html">Studio</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link link" href="">Contacts</a>
+        </li>
       </ul>
     </nav>
-    <ul>
-      <li>
-  <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <ul class="header-contact list">
+      <li class="header-link-contact">
+  <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
       </li>
-      <li>
-  <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <li class="header-link-contact">
+  <a class="header-phone link" href="tel:+110001111111">+11 (000) 111-11-11</a>
       </li>
     </ul>
   </header>
 <main>
   <section>
-    <h1>Effective Solutions for Your Business</h1>
-    <button type="button">Order Service</button>
+    <h1 class="title">Effective Solutions for Your Business</h1>
+    <button type="button" class="primery-buttom">Order Service</button>
   </section>
   <section>
-    <h2>Our directions</h2>
+    <h2 class="secondary-title">Our directions</h2>
     <ul>
       <li>
-        <h3>Strategy</h3>
-        <p>Our goal is to identify the business
+        <h3 class="work-list-title">Strategy</h3>
+        <p class="work-list-text">Our goal is to identify the business
           problem to walk away with the perfect and creative solution. </p>
       </li>
       <li>
-        <h3>Punctuality</h3>
-        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+        <h3 class="work-list-title">Punctuality</h3>
+        <p class="work-list-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
       </li>
       <li>
-        <h3>Diligence</h3>
-        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+        <h3 class="work-list-title">Diligence</h3>
+        <p class="work-list-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
       </li>
       <li>
-        <h3>Technologies</h3>
-        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        <h3 class="work-list-title">Technologies</h3>
+        <p class="work-list-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
       </li>
     </ul>
   </section>
   <section>
-    <h2>What are we doing</h2>
+    <h2 class="secondary-title">What are we doing</h2>
     <ul>
       <li>
         <img src="./img/work/pc.jpg" alt="pc" width="360" height="300">
@@ -70,34 +76,34 @@
     </ul>
   </section>
   <section>
-    <h2>Our Team</h2>
+    <h2 class="secondary-title">Our Team</h2>
     <ul>
       <li>
         <img src="./img/team/markguerrero.jpg" alt="a respectable man with a beard" width="264" height="260">
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
+        <h3 class="people-title">Mark Guerrero</h3>
+        <p class="people-text">Product Designer</p>
       </li>
       <li>
         <img src="./img/team/tomford.jpg" alt="charismatic smiling dark-haired man" width="264" height="260">
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
+        <h3 class="people-title">Tom Ford</h3>
+        <p class="people-text">Frontend Developer</p>
       </li>
       <li>
         <img src="./img/team/camilagarcia.jpg" alt="young brunette in a pink dress" width="264" height="260">
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
+        <h3 class="people-title">Camila Garcia</h3>
+        <p class="people-text">Marketing</p>
       </li>
       <li>
         <img src="./img/team/danielwilson.jpg" alt="yong frendly man" width="264" height="260">
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
+        <h3 class="people-title">Daniel Wilson</h3>
+        <p class="people-text">UI Designer</p>
       </li>
     </ul>
   </section>
 </main>
 <footer>
-  <a href="">webstudio</a>
-  <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+  <a class="logo" href="">web<span class="logo-visual">studio</span></a>
+  <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
 </html>
