--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css/styles.css">
 </head>
-<body>
+<body class="body">
   <header class="header-pages">
     <nav class="page-nav">
       <a class="logo" href="">web<span class="logo-visual">studio</span></a>
